syntax = "proto3";

package agent.v1;

import "google/protobuf/timestamp.proto";

service AgentService {
  rpc GetContainer(GetContainerRequest) returns (GetContainerResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message Container {
  string id = 1;
  string name = 2;
  map<string, string> labels = 3;
  string image = 4;
  repeated int32 ports = 5;
  string status = 6;
  google.protobuf.Timestamp created = 7;
}

message GetContainerRequest {
  string id = 1;
  string hostname = 2;
  string public_ip = 3;
  repeated string private_ips = 4;
  repeated Container containers = 5;
  google.protobuf.Timestamp last_seen = 6;
}
message GetContainerResponse {}

message RefreshTokenRequest {
  string token = 1;
}
message RefreshTokenResponse {
  string token = 1;
}
